[gd_scene load_steps=16 format=3 uid="uid://fbdhh7erijnq"]

[ext_resource type="Script" uid="uid://cxwiysrx477cq" path="res://ui/touch_controls/tank_control.gd" id="1_brsp1"]
[ext_resource type="PackedScene" uid="uid://camgssrj8fl6e" path="res://ui/touch_controls/lever/lever.tscn" id="2_xmjxb"]
[ext_resource type="Script" uid="uid://ceenq5uclnedj" path="res://ui/touch_controls/traverse_wheel/traverse_wheel.gd" id="3_gesvv"]
[ext_resource type="Texture2D" uid="uid://8uq7l7l46y78" path="res://ui/touch_controls/traverse_wheel/sprites/traverse_wheel_base.png" id="4_ijfau"]
[ext_resource type="Texture2D" uid="uid://bon2mxv2kjgr1" path="res://ui/touch_controls/traverse_wheel/sprites/traverse_wheel.png" id="5_ijy5s"]
[ext_resource type="Script" uid="uid://b3jc8iqdhkf0h" path="res://ui/touch_controls/fire_button/fire_button.gd" id="6_buqlp"]
[ext_resource type="Texture2D" uid="uid://dh3pmgul5285a" path="res://ui/touch_controls/fire_button/fire_button.png" id="7_1xpg8"]
[ext_resource type="AudioStream" uid="uid://dbc2tftwi6fju" path="res://ui/touch_controls/fire_button/click.ogg" id="8_8dgnt"]
[ext_resource type="Script" uid="uid://bf8bjst48hk3u" path="res://ui/touch_controls/shell_select.gd" id="9_gesvv"]
[ext_resource type="PackedScene" uid="uid://71fs737wnngw" path="res://ui/touch_controls/shell_select/shell_list_item/shell_list_item.tscn" id="9_xmjxb"]
[ext_resource type="Texture2D" uid="uid://mjiuy27e2xfx" path="res://global_assets/theme/icons.png" id="11_ijfau"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kye8a"]
atlas = ExtResource("7_1xpg8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2tbn"]
atlas = ExtResource("7_1xpg8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_b262a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kye8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2tbn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ijfau"]
atlas = ExtResource("11_ijfau")
region = Rect2(32, 0, 16, 16)

[node name="TankControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brsp1")

[node name="LeftLever" parent="." instance=ExtResource("2_xmjxb")]
layout_mode = 1

[node name="RightLever" parent="." instance=ExtResource("2_xmjxb")]
layout_mode = 1
offset_left = -180.0
offset_right = 0.0
scale = Vector2(0.990476, 0.984456)
lever_side = 1

[node name="TraverseWheel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = 32.0
offset_right = -24.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gesvv")

[node name="TraverseWheelBaseSprite" type="Sprite2D" parent="TraverseWheel"]
texture = ExtResource("4_ijfau")
centered = false

[node name="TraverseWheelSprite" type="Sprite2D" parent="TraverseWheel"]
position = Vector2(64, 64)
texture = ExtResource("5_ijy5s")
centered = false
offset = Vector2(-64, -64)

[node name="FireButton" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -127.0
offset_right = 156.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_buqlp")

[node name="ButtonSprite" type="AnimatedSprite2D" parent="FireButton"]
position = Vector2(48, 48)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_b262a")

[node name="ButtonClick" type="AudioStreamPlayer" parent="FireButton"]
stream = ExtResource("8_8dgnt")
volume_db = -12.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_bottom = 14.0
grow_horizontal = 0
theme_type_variation = &"PanelContainerDark"

[node name="PauseButton" type="Button" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
icon = SubResource("AtlasTexture_ijfau")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 577.0
offset_bottom = 66.0

[node name="ShellSelect" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PanelContainerDark"
script = ExtResource("9_gesvv")

[node name="ShellList" type="HBoxContainer" parent="HBoxContainer/ShellSelect"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="ShellListItem" parent="HBoxContainer/ShellSelect/ShellList" instance=ExtResource("9_xmjxb")]
layout_mode = 2
